--- a/style.css
+++ b/style.css
@@ -1,10 +1,83 @@
-input{
-width: 10px;
-border: 0;
-outline: 0;
-text-transform: uppercase;
-background-color: rgba(128, 128, 128, 0);
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
-
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Space Grotesk', sans-serif;
+  font-weight: 600;
+  color: #111;
+  background: linear-gradient(90deg, rgb(88, 39, 171), rgb(168, 135, 226));
+  background-size: cover;
+  overflow-x: hidden;
 }
 
+.content {
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+  margin-left: 30%;
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+s {
+  color: red;
+}
+
+input{
+    width: 20px;
+    border: none;
+    outline: 0;
+    text-transform: uppercase;
+    background-color: rgba(128, 128, 128, 0);
+    
+    font-size: 21px;
+    }
+
+    td {
+        text-align: center;
+    }
+
+    table .td_veri {
+        border: 2px solid black;
+        border-radius: 4px;
+    }
+    
+.numberDeco {
+  background-color: rgb(180, 231, 13);
+  align-self: center;
+  border-radius: 4px;
+}
+
+.box {
+  width: 90%;
+  margin-top: 50px;
+  background: #e4e4e4;
+  border-radius: 5px;
+}
+.box2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  width: 100%;
+  background: #e5e5e5;
+  border-radius: 5px;
+}
+
+.contentDica {
+  font-size: 15px;
+}
+.contentDica li {
+  margin: 10px;
+}
+.contentDica h2 {
+  margin-left: 50px;
+  font-size: 20px;
+}
